✅ TEST: add tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ node_js:
 cache:
   directories:
   - node_modules
+  - '$HOME/.npm'
 install:
   - npm install
 script:
   - npm run test
   - npm run build
+after_success:
+  - npm run test:cov
