--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "keywords": [
     "nestjs",
-    "toolbox"
+    "toolbox",
+    "logger"
   ],
   "main": "build/index.js",
   "typings": "build/index.d.ts",
@@ -28,7 +29,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "version": "standard-version",
+    "version": "npm run build && standard-version",
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
     "prepare-release": "run-s reset test test:cov version"
