--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "@nestjs/common": "^6.6.3",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^3.0.0",
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
     "chalk": "^2.4.2",
-    "rxjs": "^6.5.2"
+    "reflect-metadata": "^0.1.12",
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.5.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
