👌 IMPROVE: split in packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,17 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "build/",
-    "rootDir": "src",
-    "baseUrl": "./",
+    "baseUrl": "./packages",
     "incremental": true,
     /* Additional Checks */
     "noUnusedLocals": true /* Report errors on unused locals. */,
     "noUnusedParameters": true /* Report errors on unused parameters. */,
     "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-
+    "paths": {
+      "@lupu60/nestjs-toolbox/bunyan-logger": ["bunyan-logger/src"],
+      "@lupu60/nestjs-toolbox/winston-logger": ["winston-logger/src"],
+    },
     /* Debugging Options */
     "traceResolution": false /* Report module resolution log messages. */,
     "listEmittedFiles": false /* Print names of generated files part of the compilation. */,
@@ -24,7 +26,7 @@
     "pretty": true /* Stylize errors and messages using color and context. */,
 
     "lib": ["es2017"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "typeRoots": ["node_modules/@types", "./packages/**/**/types"]
   },
   "exclude": ["node_modules", "dist"]
 }
