--- a/packages/winston-logger/package.json
+++ b/packages/winston-logger/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "@lupu60/nestjs-toolbox-winston-logger",
-    "description": "n/a",
-    "license": "MIT",
-    "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
-    "publishConfig": {
-      "access": "public"
-    },
-    "files": [
-      "lib"
-    ],
-    "scripts": {
-      "prebuild": "npx rimraf ./lib",
-      "build": "npx tsc -p tsconfig.build.json"
-    }
+  "name": "@lupu60/nestjs-toolbox-winston-logger",
+  "description": "n/a",
+  "version": "0.0.13",
+  "license": "MIT",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "prebuild": "npx rimraf ./lib",
+    "build": "../../node_modules/.bin/tsc -p tsconfig.json "
   }
+}
