--- a/package.json
+++ b/package.json
@@ -23,34 +23,24 @@
     "winston"
   ],
   "scripts": {
-    "version": "lerna run build && standard-version"
+    "version": "lerna run build && standard-version",
+    "fix:prettier": "prettier \"packages/**/*.ts\" --write"
   },
   "engines": {
     "node": "12",
     "npm": "6"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
-    "codecov": "^3.5.0",
-    "cz-conventional-changelog": "^2.1.0",
-    "lerna": "3.20.2",
+    "lerna": "3.22.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "standard-version": "^7.0.0",
-    "trash-cli": "^3.0.0",
-    "ts-jest": "24.3.0",
-    "ts-node": "8.5.4",
-    "tsc-watch": "4.2.2",
+    "prettier": "2.0.5",
+    "rimraf": "^3.0.0",
+    "standard-version": "8.0.0",
     "tsconfig-paths": "3.9.0",
-    "tslint": "^5.18.0",
+    "tslint": "6.1.2",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.5.3"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
   }
 }
