--- a/packages/winston-logger/package.json
+++ b/packages/winston-logger/package.json
@@ -22,11 +22,7 @@
     "build": "npm run clean && npm run compile",
     "clean": "rimraf -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
-    "prepublishOnly": "npm run build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "prepublishOnly": "npm run build"
   },
   "bugs": {
     "url": "https://github.com/lupu60/nestjs-toolbox/issues"
@@ -36,31 +32,14 @@
     "@nestjs/core": "^7.2.0",
     "@nestjs/platform-express": "^7.2.0",
     "chalk": "^4.1.0",
+    "@types/express": "4.17.6",
+    "@types/node": "14.0.14",
     "lodash-es": "^4.17.15",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
-    "winston": "^3.2.1"
-  },
-  "devDependencies": {
-    "jest": "^24.9.0",
     "rimraf": "~3.0.2",
-    "@types/express": "4.16.1",
-    "@types/jest": "^25.1.3",
-    "@types/node": "12.12.14",
-    "typescript": "~3.4.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "ts-node": "8.10.2",
+    "typescript": "3.9.5",
+    "winston": "^3.2.1"
   }
 }
