--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
-# language: node_js
-# node_js:
-#  - "stable"
-# cache:
-#   directories:
-#   - node_modules
-#   - '$HOME/.npm'
-# install:
-#   - npm install
-# script:
-#   - npm run test
-#   - npm run build
-# after_success:
-#   - npm run test:cov
+language: node_js
+node_js:
+ - "stable"
+cache:
+  directories:
+  - node_modules
+  - '$HOME/.npm'
+install:
+  - npm install
+  - npm install -g lerna
+script:
+  - lerna run build
