--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,8 +19,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
+        npm install -g lerna
         npm install
-        npm run build --if-present
-        npm test
+        lerna run build
       env:
         CI: true
