--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nest-toolbox/bunyan-logger",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "description": "nestjs toolbox",
   "author": "bogdanlupu <lupu60@gmail.com>",
   "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/bunyan-logger#readme",
