👌 IMPROVE: updat lerna json

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
+  "command": {
+    "publish": {
+      "ignoreChanges": ["ignored-file"]
+    }
+  },
   "packages": [
     "packages/*"
   ],
+  "npmClient": "npm",
   "version": "1.0.4-alpha.0"
 }
