--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@lupu60/nestjs-toolbox",
   "description": "nestjs toolbox",
   "author": "bogdanlupu <lupu60@gmail.com>",
+  "publicConfig": {
+    "access": "public"
+  },
+  "private": "false",
   "homepage": "https://github.com/lupu60/nestjs-toolbox#readme",
   "repository": {
     "type": "git",
