--- a/packages/winston-logger/package.json
+++ b/packages/winston-logger/package.json
@@ -7,6 +7,10 @@
   "license": "MIT",
   "main": "dist/index",
   "types": "dist/index",
+  "publicConfig": {
+    "access": "public"
+  },
+  "private": "false",
   "files": [
     "dist"
   ],
