👌 IMPROVE: set publishConfig

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "publicConfig": {
     "access": "public"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "private": "false",
   "homepage": "https://github.com/lupu60/nestjs-toolbox#readme",
   "repository": {
