--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -10,6 +10,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "publicConfig": {
     "access": "public"
   },
