👌 IMPROVE: fix name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-toolbox",
+  "name": "@lupu60/nestjs-toolbox",
   "description": "nestjs toolbox",
   "author": "bogdanlupu <lupu60@gmail.com>",
   "publicConfig": {
