👌 IMPROVE: update keywords

--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -16,6 +16,12 @@
   "publicConfig": {
     "access": "public"
   },
+  "keywords": [
+    "nestjs",
+    "toolbox",
+    "logger",
+    "bunyan"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lupu60/nestjs-toolbox.git"
