--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -49,7 +49,7 @@
     "bunyan": "1.8.14",
     "bunyan-format": "^0.2.1",
     "chalk": "^4.1.0",
-    "lodash-es": "^4.17.15",
+    "lodash": "4.17.19",
     "reflect-metadata": "^0.1.13",
     "rimraf": "~3.0.2",
     "rxjs": "^6.5.5",
