--- a/packages/typeorm-upsert/package.json
+++ b/packages/typeorm-upsert/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lupu60/nest-toolbox-typeorm-upsert",
+  "name": "@lupu60/typeorm-upsert",
   "description": "upsert function for typeorm",
   "version": "1.1.0",
   "author": "bogdanlupu <lupu60@gmail.com>",
