--- a/packages/typeorm-upsert/package.json
+++ b/packages/typeorm-upsert/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lupu60/typeorm-upsert",
+  "name": "@nest-toolbox/typeorm-upsert",
   "description": "upsert function for typeorm",
   "version": "1.1.0",
   "author": "bogdanlupu <lupu60@gmail.com>",
@@ -33,8 +33,7 @@
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build"
   },
-
-  "gitHead": "bccd36f626890db6297a1d18df26c69239a763b0",
+  "gitHead": "8704142ee8b8c990d2b1872faf52ef8d32bbeb95",
   "dependencies": {
     "lodash": "4.17.19",
     "rimraf": "3.0.2",
