--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "toolbox",
     "logger",
     "bunyan",
-    "winston"
+    "winston",
+    "open-api"
   ],
   "engines": {
     "node": "12",
