--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,8 +19,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        npm install -g lerna
-        npm install
-        lerna run build
+        npm run bootstrap
+        npm run build
+        npm run test
       env:
         CI: true
