--- a/jest.config.json
+++ b/jest.config.json
@@ -1,14 +1,14 @@
 {
-  "verbose": true,
-  "collectCoverage": true,
-  "coverageReporters": ["lcov", "json"],
-  "collectCoverageFrom": ["**/src/**"],
-  "colors":true,
-  "reporters": ["default", "jest-junit"],
-  "testResultsProcessor": "jest-junit",
-  "transform": {
-    "^.+\\.tsx?$": "ts-jest"
-  },
-  "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-  "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "verbose": true,
+    "collectCoverage": true,
+    "coverageReporters": ["lcov", "json"],
+    "collectCoverageFrom": ["**/src/**", "!**/src/test/**"],
+    "colors": true,
+    "reporters": ["default", "jest-junit"],
+    "testResultsProcessor": "jest-junit",
+    "transform": {
+        "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
 }
