--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -36,7 +36,10 @@
   "scripts": {
     "build": "npm run clean && npm run compile",
     "clean": "rimraf -rf ./dist",
+    "cleanup": "rimraf -rf dist coverage",
     "compile": "tsc -p tsconfig.build.json",
+    "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
+    "test": "jest --ci --config ../../jest.config.json ",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
