🐛 FIX: ci with gitkeep

--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -8,8 +8,7 @@
   "keywords": [
     "nestjs",
     "toolbox",
-    "logger",
-    "winston"
+    "open-api"
   ],
   "repository": {
     "type": "git",
