--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -2,7 +2,7 @@
   "name": "@nest-toolbox/open-api-spec-to-ts",
   "description": "nestjs toolbox",
   "version": "1.1.5",
-  "author": "bogdanlupu <lupu60@gmail.com>",
+  "author": "getlarge <ed@getlarge.eu>",
   "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/open-api-spec-to-ts#readme",
   "license": "MIT",
   "keywords": [
