--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nest-toolbox/open-api-spec-to-ts",
   "description": "nestjs toolbox",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "author": "getlarge <ed@getlarge.eu>",
   "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/open-api-spec-to-ts#readme",
   "license": "MIT",
@@ -54,5 +54,6 @@
   },
   "devDependencies": {
     "typescript": "3.9.7"
-  }
+  },
+  "gitHead": "22fa04ad005370f2b8e4fa326f6fdc03eb3b2b44"
 }
