--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "build": "npm run cleanup && lerna run compile",
     "cleanup": "lerna run cleanup --stream --parallel",
     "lint": "lerna run lint",
-    "publish": "lerna publish --force-publish=* --skip-npm --skip-git",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
@@ -56,12 +55,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
     "rimraf": "^3.0.0",
-    "standard-version": "8.0.1",
+    "standard-version": "9.0.0",
     "ts-jest": "26.1.4",
     "tsconfig-paths": "3.9.0",
-    "tslint": "6.1.2",
+    "tslint": "6.1.3",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "4.0.2"
   }
 }
