--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tslint": "6.1.3",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.0.2"
+    "typescript": "4.0.2",
+    "@lerna/run": "3.21.0"
   }
 }
