--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@lerna/publish": "3.22.1",
+    "@lerna/run": "3.21.0",
     "@types/jest": "26.0.9",
     "jest": "26.2.2",
     "jest-junit": "11.1.0",
@@ -61,7 +62,6 @@
     "tslint": "6.1.3",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.0.2",
-    "@lerna/run": "3.21.0"
+    "typescript": "4.0.2"
   }
 }
