--- a/packages/http-logger-middleware/package.json
+++ b/packages/http-logger-middleware/package.json
@@ -43,5 +43,6 @@
     "devDependencies": {
         "rimraf": "3.0.2",
         "typescript": "3.9.7"
-    }
+    },
+    "gitHead": "cc164bd38bb811f559a559c2004899288987e3be"
 }
