--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
   "devDependencies": {
     "@lerna/publish": "3.22.1",
     "@lerna/run": "3.21.0",
-    "@types/jest": "26.0.9",
-    "jest": "26.2.2",
+    "@types/jest": "26.0.12",
+    "jest": "26.4.2",
     "jest-junit": "11.1.0",
     "lerna": "3.22.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5",
+    "prettier": "2.1.1",
     "rimraf": "^3.0.0",
     "standard-version": "9.0.0",
-    "ts-jest": "26.1.4",
+    "ts-jest": "26.3.0",
     "tsconfig-paths": "3.9.0",
     "tslint": "6.1.3",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.0.2"
+    "typescript": "4.0.2",
+    "ts-node": "9.0.0"
   }
 }
