--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -43,11 +43,11 @@
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
-        "@nestjs/common": "^7.2.0",
-        "@types/bunyan": "^1.8.6",
-        "@types/node": "14.6.0",
+        "@nestjs/common": "7.4.4",
+        "@types/bunyan": "1.8.6",
+        "@types/node": "14.6.2",
         "bunyan": "1.8.14",
-        "bunyan-format": "^0.2.1",
+        "bunyan-format": "0.2.1",
         "colors": "1.4.0",
         "ts-node": "9.0.0"
     },
