--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "listFiles": false /* Print names of files part of the compilation. */,
     "pretty": true /* Stylize errors and messages using color and context. */,
 
-    "lib": ["es2016","DOM"],
+    "lib": ["DOM","ES2016"],
     "typeRoots": ["node_modules/@types"]
   },
   "exclude": ["node_modules", "dist"]
