📦 NEW: add chunk option and set default chunk 1000

--- a/packages/typeorm-upsert/tsconfig.build.json
+++ b/packages/typeorm-upsert/tsconfig.build.json
@@ -1,9 +1,8 @@
 {
-    "extends": "../../tsconfig.build.json",
-
-    "compilerOptions": {
-        "outDir": "./dist"
-    },
-
-    "include": ["src/**/*"]
+  "extends": "../../tsconfig.build.json",
+  "lib": ["es2018", "dom", "esnext"],
+  "compilerOptions": {
+    "outDir": "./dist"
+  },
+  "include": ["src/**/*"]
 }
