--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "rimraf": "^3.0.0",
     "standard-version": "9.1.0",
     "ts-jest": "26.4.4",
+    "ts-node": "9.1.1",
     "tsconfig-paths": "3.9.0",
     "tslint": "6.1.3",
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "4.1.2",
-    "ts-node": "9.1.1"
+    "typescript": "4.1.2"
   }
 }
