--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "open-api"
   ],
   "engines": {
-    "node": "14",
-    "npm": "7"
+    "node": ">=12 <=15",
+    "npm": ">= 6 <=7"
   },
   "scripts": {
     "bootstrap": "npm install lerna && lerna bootstrap && npm install",
