--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -1,59 +1,59 @@
 {
-    "name": "@nest-toolbox/bunyan-logger",
-    "description": "nestjs toolbox",
-    "version": "1.4.3",
-    "author": "bogdanlupu <lupu60@gmail.com>",
-    "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/bunyan-logger#readme",
-    "license": "MIT",
-    "keywords": [
-        "nestjs",
-        "toolbox",
-        "logger",
-        "bunyan"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lupu60/nestjs-toolbox.git"
-    },
-    "bugs": {
-        "url": "https://github.com/lupu60/nestjs-toolbox/issues"
-    },
-    "publishConfig": {
-        "registry": "https://registry.npmjs.org/"
-    },
-    "publicConfig": {
-        "access": "public"
-    },
-    "main": "dist/index",
-    "types": "dist/index",
-    "files": [
-        "dist"
-    ],
-    "engines": {
-        "node": "14",
-        "npm": "7"
-    },
-    "scripts": {
-        "build": "npm run clean && npm run compile",
-        "clean": "rimraf -rf ./dist",
-        "cleanup": "rimraf -rf dist coverage",
-        "compile": "tsc -p tsconfig.build.json",
-        "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
-        "test": "jest --ci --config ../../jest.config.json ",
-        "prepublishOnly": "npm run build"
-    },
-    "dependencies": {
-        "@nestjs/common": "7.6.18",
-        "@types/bunyan": "1.8.6",
-        "@types/node": "15.12.5",
-        "bunyan": "1.8.15",
-        "bunyan-format": "0.2.1",
-        "colors": "1.4.0",
-        "ts-node": "10.0.0"
-    },
-    "gitHead": "cc164bd38bb811f559a559c2004899288987e3be",
-    "devDependencies": {
-        "rimraf": "~3.0.2",
-        "typescript": "4.3.5"
-    }
+  "name": "@nest-toolbox/bunyan-logger",
+  "description": "nestjs toolbox",
+  "version": "1.4.3",
+  "author": "bogdanlupu <lupu60@gmail.com>",
+  "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/bunyan-logger#readme",
+  "license": "MIT",
+  "keywords": [
+    "nestjs",
+    "toolbox",
+    "logger",
+    "bunyan"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lupu60/nestjs-toolbox.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lupu60/nestjs-toolbox/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "publicConfig": {
+    "access": "public"
+  },
+  "main": "dist/index",
+  "types": "dist/index",
+  "files": [
+    "dist"
+  ],
+  "engines": {
+    "node": ">=12 <=15",
+    "npm": ">= 6 <=7"
+  },
+  "scripts": {
+    "build": "npm run clean && npm run compile",
+    "clean": "rimraf -rf ./dist",
+    "cleanup": "rimraf -rf dist coverage",
+    "compile": "tsc -p tsconfig.build.json",
+    "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
+    "test": "jest --ci --config ../../jest.config.json ",
+    "prepublishOnly": "npm run build"
+  },
+  "dependencies": {
+    "@nestjs/common": "7.6.15",
+    "@types/bunyan": "1.8.6",
+    "@types/node": "15.0.3",
+    "bunyan": "1.8.15",
+    "bunyan-format": "0.2.1",
+    "colors": "1.4.0",
+    "ts-node": "9.1.1"
+  },
+  "gitHead": "cc164bd38bb811f559a559c2004899288987e3be",
+  "devDependencies": {
+    "rimraf": "~3.0.2",
+    "typescript": "4.2.3"
+  }
 }
