--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@nestjs/common": "7.6.15",
     "colors": "1.4.0",
+    "reflect-metadata": "0.1.13",
     "ts-node": "10.4.0"
   },
   "devDependencies": {
