--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -21,7 +21,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "publicConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "main": "dist/index",
   "types": "dist/index",
@@ -51,5 +52,5 @@
     "rimraf": "~3.0.2",
     "typescript": "4.5.4"
   },
-  "gitHead": "bfa41a24d5c085427ced65ff92078936ffdf62b6"
+  "gitHead": "a6b171b15d2a2eaab6a05cbb181f5f2528f1be35"
 }
