--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "access": "public"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "private": "false",
