--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -24,7 +24,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "private": "false",
+  "private": false,
   "main": "dist/index",
   "types": "dist/index",
   "files": [
