--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "tslint-clean-code": "0.2.10",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.4"
+  },
+  "dependencies": {
+    "reflect-metadata": "0.1.13"
   }
 }
