--- a/packages/typeorm-paginate/package.json
+++ b/packages/typeorm-paginate/package.json
@@ -52,5 +52,6 @@
   "devDependencies": {
     "rimraf": "~3.0.2",
     "typescript": "4.5.4"
-  }
+  },
+  "gitHead": "66ab5bfa30fd68700b2d1bba62afa0558da6aed0"
 }
