--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -50,8 +50,9 @@
     "ts-node": "10.4.0"
   },
   "devDependencies": {
+    "@types/node": "17.0.8",
     "rimraf": "~3.0.2",
-    "typescript": "4.5.4"
+    "typescript": "4.5.5"
   },
   "gitHead": "c2d17d02efe1f507ce8f7b2523f24d32c95127af"
 }
