--- a/packages/typeorm-paginate/package.json
+++ b/packages/typeorm-paginate/package.json
@@ -50,8 +50,9 @@
     "typeorm": "0.2.41"
   },
   "devDependencies": {
+    "@types/node": "17.0.8",
     "rimraf": "~3.0.2",
-    "typescript": "4.5.4"
+    "typescript": "4.5.5"
   },
   "gitHead": "a373cb6ca41984656cc31b54ac4eaeb435cbc078"
 }
