--- a/packages/access-control/package.json
+++ b/packages/access-control/package.json
@@ -29,8 +29,8 @@
     "dist"
   ],
   "engines": {
-    "node": "14",
-    "npm": "7"
+    "node": ">=12 <=16",
+    "npm": ">= 6 <=7"
   },
   "scripts": {
     "build": "npm run clean && npm run compile",
