--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
     "@lerna/publish": "5.6.2",
     "@lerna/run": "5.6.1",
     "@types/jest": "27.4.1",
+    "eslint": "8.30.0",
+    "eslint-config-semistandard": "17.0.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.6.0",
+    "eslint-plugin-promise": "6.1.1",
     "jest": "26.6.3",
     "jest-junit": "14.0.1",
     "lerna": "5.5.4",
