build(deps): update package versions and TypeScript configuration
- Upgrade @nestjs/common and @nestjs/core to version 11.1.3.
- Update reflect-metadata to version 0.2.2.
- Bump devDependencies: @nestjs/testing to 11.1.3, @types/node to 24.0.3, rimraf to 6.0.1, rxjs to 7.8.2, ts-node to 10.9.2, and typescript to 5.8.3.
- Adjust node engine requirements in package.json files to support Node.js versions 18 to 22.
- Modify tsconfig.json to include "skipLibCheck" and update "lib" to use "ESNext" and "DOM".

--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -30,8 +30,8 @@
     "dist"
   ],
   "engines": {
-    "node": ">=12 <=16",
-    "npm": ">= 6 <=8"
+    "node": ">=18 <=22",
+    "npm": "<=11"
   },
   "scripts": {
     "build": "npm run clean && npm run compile",
