--- a/packages/access-control/package.json
+++ b/packages/access-control/package.json
@@ -29,8 +29,8 @@
     "dist"
   ],
   "engines": {
-    "node": ">=12 <=16",
-    "npm": ">= 6 <=8"
+    "node": ">=18 <=22",
+    "npm": "<=11"
   },
   "scripts": {
     "build": "npm run clean && npm run compile",
@@ -42,18 +42,18 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.0",
-    "@nestjs/core": "^11.1.2",
-    "reflect-metadata": "^0.1.13",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/core": "^11.1.3",
+    "reflect-metadata": "^0.2.2",
     "role-acl": "4.5.4"
   },
   "devDependencies": {
-    "@nestjs/testing": "11.1.0",
-    "@types/node": "20.5.7",
-    "rimraf": "~5.0.0",
-    "rxjs": "7.8.1",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "@nestjs/testing": "11.1.3",
+    "@types/node": "24.0.3",
+    "rimraf": "~6.0.1",
+    "rxjs": "7.8.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3"
   },
   "gitHead": "bfa41a24d5c085427ced65ff92078936ffdf62b6"
 }
