--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,36 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "build/",
-    "baseUrl": "./packages",
-    "incremental": true,
-    /* Additional Checks */
-    "noUnusedLocals": true /* Report errors on unused locals. */,
-    "noUnusedParameters": true /* Report errors on unused parameters. */,
-    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-
-    /* Debugging Options */
-    "traceResolution": false /* Report module resolution log messages. */,
-    "listEmittedFiles": false /* Print names of generated files part of the compilation. */,
-    "listFiles": false /* Print names of files part of the compilation. */,
-    "pretty": true /* Stylize errors and messages using color and context. */,
-
-    "lib": ["DOM","ES2016"],
-    "typeRoots": ["node_modules/@types"]
-  },
-  "exclude": ["node_modules", "dist"]
+   "compilerOptions": {
+      "module": "commonjs",
+      "declaration": true,
+      "removeComments": false,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "target": "es2017",
+      "sourceMap": true,
+      "outDir": "build/",
+      "baseUrl": "./packages",
+      "skipLibCheck": true,
+      "incremental": true,
+      /* Additional Checks */
+      "noUnusedLocals": true /* Report errors on unused locals. */,
+      "noUnusedParameters": true /* Report errors on unused parameters. */,
+      "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+      "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+      /* Debugging Options */
+      "traceResolution": false /* Report module resolution log messages. */,
+      "listEmittedFiles": false /* Print names of generated files part of the compilation. */,
+      "listFiles": false /* Print names of files part of the compilation. */,
+      "pretty": true /* Stylize errors and messages using color and context. */,
+      "lib": [
+         "ESNext",
+         "DOM"
+      ],
+      "typeRoots": [
+         "node_modules/@types"
+      ]
+   },
+   "exclude": [
+      "node_modules",
+      "dist"
+   ]
 }
